--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <ul id="main"></ul>
+    <div id="test_remove"></div>
     <script src="$dom_component - examples.js"></script>
 </body>
 </html>
