--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
 <body>
     <ul id="main"></ul>
     <div id="test_remove"></div>
+    <div id="test_select"></div>
     <script src="$dom_component - examples.js"></script>
 </body>
 </html>
